update index.html about Footer

--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-
+        <h1>this is footer</h1>
+        <h3>Footer 2</h3>
     </footer>
 
     <!-- Modal -->
