update shopping cart

--- a/index.html
+++ b/index.html
@@ -167,7 +167,42 @@
                             <p class="shopping_products_list_has-title">Sản phẩm đã thêm</p>
                             <ul class="shopping_products_list_has-many">
                                 <li class="shopping_products_list_has-detail">
-                                    <img src="./assets/images/mypham01.webp" alt="Mỹ phẩm Hàn quốc" class="shopping_products_list_has-detail-img">
+                                    <img src="./assets/images/mypham01.webp" alt="Mỹ phẩm Hàn quốc"
+                                        class="shopping_products_list_has-detail-img">
+                                    <div class="shopping_products_list_has-detail-content">
+                                        <div class="shopping_products_list_has-detail-1">
+                                            <p>Mỹ phẩm hàn quốc chính hãng</p>
+                                            <span class="cost">2.000.000 đ</span>
+                                            <span class="multiple">x</span>
+                                            <span class="number">2</span>
+                                        </div>
+                                        <div class="shopping_products_list_has-detail-2">
+                                            <span class="des">Loại sản phẩm: Tự nhiên</span>
+                                            <span class="remove">Xóa</span>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="shopping_products_list_has-detail">
+                                    <img src="./assets/images/mypham01.webp" alt="Mỹ phẩm Hàn quốc"
+                                        class="shopping_products_list_has-detail-img">
+                                    <div class="shopping_products_list_has-detail-content">
+                                        <div class="shopping_products_list_has-detail-1">
+                                            <p>Mỹ phẩm hàn quốc chính hãng</p>
+                                            <span class="cost">2.000.000 đ</span>
+                                            <span class="multiple">x</span>
+                                            <span class="number">2</span>
+                                        </div>
+                                        <div class="shopping_products_list_has-detail-2">
+                                            <span class="des">Loại sản phẩm: Tự nhiên</span>
+                                            <span class="remove">Xóa</span>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="shopping_products_list_has-detail">
+                                    <img src="./assets/images/mypham01.webp" alt="Mỹ phẩm Hàn quốc"
+                                        class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
                                             <p>Mỹ phẩm hàn quốc chính hãng</p>
