--- a/index.html
+++ b/index.html
@@ -227,13 +227,8 @@
     </header>
 
     <!-- CONTENT -->
-    <div class="container" style="font-size: 1.4rem; margin-top: 100px;">
-        <!-- <button class="btn btn1">Nhận thông báo</button> -->
-        <h4>Notes:</h4>
-
-        <span style="user-select: none;">Mouse</span>
-        <p>Mouse p</p>
-        <h3 style="user-select: none;">Mouse h3</h3>
+    <div class="container">
+     
     </div>
 
     <!-- FOOTER -->
