--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                         class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
-                                            <p>Mỹ phẩm hàn quốc chính hãng</p>
+                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính hãng</h5>
                                             <span class="cost">2.000.000 đ</span>
                                             <span class="multiple">x</span>
                                             <span class="number">2</span>
@@ -188,7 +188,7 @@
                                         class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
-                                            <p>Mỹ phẩm hàn quốc chính hãng</p>
+                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính hãng</h5>
                                             <span class="cost">2.000.000 đ</span>
                                             <span class="multiple">x</span>
                                             <span class="number">2</span>
@@ -205,7 +205,7 @@
                                         class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
-                                            <p>Mỹ phẩm hàn quốc chính hãng</p>
+                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính hãng</h5>
                                             <span class="cost">2.000.000 đ</span>
                                             <span class="multiple">x</span>
                                             <span class="number">2</span>
