update cart => done

--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
                                         class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
-                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính hãng</h5>
-                                            <span class="cost">2.000.000 đ</span>
+                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính
+                                                hãng</h5>
+                                            <span class="shopping_products_list_has-detail-1-cost">2.000.000 đ</span>
                                             <span class="multiple">x</span>
                                             <span class="number">2</span>
                                         </div>
@@ -188,8 +189,9 @@
                                         class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
-                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính hãng</h5>
-                                            <span class="cost">2.000.000 đ</span>
+                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính
+                                                hãng</h5>
+                                            <span class="shopping_products_list_has-detail-1-cost">2.000.000 đ</span>
                                             <span class="multiple">x</span>
                                             <span class="number">2</span>
                                         </div>
@@ -205,10 +207,11 @@
                                         class="shopping_products_list_has-detail-img">
                                     <div class="shopping_products_list_has-detail-content">
                                         <div class="shopping_products_list_has-detail-1">
-                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính hãng</h5>
-                                            <span class="cost">2.000.000 đ</span>
-                                            <span class="multiple">x</span>
-                                            <span class="number">2</span>
+                                            <h5 class="shopping_products_list_has-detail-1-name">Mỹ phẩm hàn quốc chính
+                                                hãng</h5>
+                                            <span class="shopping_products_list_has-detail-1-cost">2.000.000 đ</span>
+                                            <span class="shopping_products_list_has-detail-1-multiple">x</span>
+                                            <span class="shopping_products_list_has-detail-1-number">2</span>
                                         </div>
                                         <div class="shopping_products_list_has-detail-2">
                                             <span class="des">Loại sản phẩm: Tự nhiên</span>
@@ -217,7 +220,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <button class="btn">Xem giỏ hàng</button>
+                            <button class="btn view_cart">Xem giỏ hàng</button>
                         </div>
                     </div>
                 </div>
@@ -228,7 +231,7 @@
 
     <!-- CONTENT -->
     <div class="container">
-     
+
     </div>
 
     <!-- FOOTER -->
