done shopping cart

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <button class="btn view_cart">Xem giỏ hàng</button>
+                            <a href="./pages/shopping_cart.html" class="btn view_cart">Xem giỏ hàng</a>
                         </div>
                     </div>
                 </div>
