--- a/index.html
+++ b/index.html
@@ -110,10 +110,20 @@
                         </a>
                     </li>
 
-                    <li class="header__nav-item item1 text-bold register_js">
-                        Đăng ký</li>
-                    <li class="header__nav-item text-bold login_js"><span class="ti-user"></span> Đăng nhập</li>
+                    <!-- <li class="header__nav-item item1 text-bold register_js">Đăng ký</li>
+                    <li class="header__nav-item text-bold login_js"><span class="ti-user"></span> Đăng nhập</li> -->
 
+                    <!-- *** Khi đã đăng nhập *** -->
+                    <li class="header__nav-item header__nav-item-user">
+                        <img src="./assets/images/anhmeo01.jpg" alt="" class="header__nav-item-user-img">
+                        <span class="header__nav-item-user-name">Nguyen Van Chung</span>
+                        <div class="header__nav-item-user_user-info">
+                            <a class="header__nav-item-user_user-info_account">Tài khoản của tôi</a>
+                            <a class="header__nav-item-user_user-info_address">Địa chỉ của tôi</a>
+                            <a class="header__nav-item-user_user-info_order">Đơn mua</a>
+                            <a class="header__nav-item-user_user-info_logout">Đăng xuất</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
 
