--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <ul class="header__nav-list">
                     <li class="header__nav-item show_notify">
                         <a href="" class="header__nav-item-link">
-                            <i class="fa-icon fas fa-bell"></i>
+                            <i class="fa-icon far fa-bell"></i>
                             Thông báo
                         </a>
                         <div class="notification">
@@ -105,8 +105,9 @@
 
                     <li class="header__nav-item">
                         <a href="" class="header__nav-item-link">
-                            <i class="fa-icon fas fa-question-circle"></i>
+                            <i class="fa-icon far fa-question-circle"></i>
                             Trợ giúp
+
                         </a>
                     </li>
 
@@ -130,7 +131,9 @@
             <!-- Khung tìm kiếm - Search secsion -->
             <div class="header__search">
                 <div class="header_search-logo">
-                    <img src="./assets/images/logoSopee01.png" class="logo_img" alt="Điện thoại Chung Tuyết">
+                    <a href="/">
+                        <img src="./assets/images/logoSopee01.png" class="logo_img" alt="Điện thoại Chung Tuyết">
+                    </a>
                 </div>
                 <div class="header_search-input">
 
