--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                             <a class="header__nav-item-user_user-info_address">Địa chỉ của tôi</a>
                             <a class="header__nav-item-user_user-info_order">Đơn mua</a>
                             <a class="header__nav-item-user_user-info_logout">Đăng xuất</a>
+                            
                         </div>
                     </li>
                 </ul>
@@ -244,7 +245,36 @@
 
     <!-- CONTENT -->
     <div class="container">
-
+        <div class="category">
+            <h3 class="category_heading">
+                <i class="fas fa-list"></i>
+                Danh Mục
+            </h3>
+            <ul class="category_list">
+                <li class="category_item category_item--active">
+                    <a href="#" class="category_item__link">Trang điểm mặt</a>
+                </li>
+                <li class="category_item">
+                    <a href="#" class="category_item__link">Trang điểm mắt</a>
+                </li>
+                <li class="category_item">
+                    <a href="#" class="category_item__link">Trang điểm môi</a>
+                </li>
+                <li class="category_item">
+                    <a href="#" class="category_item__link">Trang điểm môi</a>
+                </li>
+                <li class="category_item">
+                    <a href="#" class="category_item__link">Trang điểm môi</a>
+                </li>
+                <li class="category_item">
+                    <a href="#" class="category_item__link">Trang điểm môi</a>
+                </li>
+                <li class="category_item">
+                    <a href="#" class="category_item__link">Trang điểm môi</a>
+                </li>
+                
+            </ul>
+        </div>
     </div>
 
     <!-- FOOTER -->
