--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <a class="header__nav-item-user_user-info_address">Địa chỉ của tôi</a>
                             <a class="header__nav-item-user_user-info_order">Đơn mua</a>
                             <a class="header__nav-item-user_user-info_logout">Đăng xuất</a>
-                            
+
                         </div>
                     </li>
                 </ul>
@@ -245,35 +245,39 @@
 
     <!-- CONTENT -->
     <div class="container">
-        <div class="category">
-            <h3 class="category_heading">
-                <i class="fas fa-list"></i>
-                Danh Mục
-            </h3>
-            <ul class="category_list">
-                <li class="category_item category_item--active">
-                    <a href="#" class="category_item__link">Trang điểm mặt</a>
-                </li>
-                <li class="category_item">
-                    <a href="#" class="category_item__link">Trang điểm mắt</a>
-                </li>
-                <li class="category_item">
-                    <a href="#" class="category_item__link">Trang điểm môi</a>
-                </li>
-                <li class="category_item">
-                    <a href="#" class="category_item__link">Trang điểm môi</a>
-                </li>
-                <li class="category_item">
-                    <a href="#" class="category_item__link">Trang điểm môi</a>
-                </li>
-                <li class="category_item">
-                    <a href="#" class="category_item__link">Trang điểm môi</a>
-                </li>
-                <li class="category_item">
-                    <a href="#" class="category_item__link">Trang điểm môi</a>
-                </li>
-                
-            </ul>
+        <div class="grid">
+            <div class="grid__row">
+                <!-- Danh mục phải - sidebar -->
+                <div class="grid__column_2">
+                    <div class="category">
+                        <h3 class="category_heading">
+                            <i class="category_icon fas fa-list"></i>
+                            Danh Mục
+                        </h3>
+                        <ul class="category_list">
+                            <li class="category_item category_item--active">
+                                <a href="#" class="category_item__link">Trang điểm mặt</a>
+                            </li>
+                            <li class="category_item">
+                                <a href="#" class="category_item__link">Trang điểm mắt</a>
+                            </li>
+                            <li class="category_item">
+                                <a href="#" class="category_item__link">Trang điểm môi</a>
+                            </li>
+                            <li class="category_item">
+                                <a href="#" class="category_item__link">Trang điểm môi</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Nội dung -->
+                <div class="grid__column_8">
+
+                </div>
+
+            </div>
+
         </div>
     </div>
 
