modifier category => done

--- a/index.html
+++ b/index.html
@@ -272,13 +272,19 @@
                 </div>
 
                 <!-- Nội dung -->
-                <div class="grid__column_8">
-
+                <div class="grid__column_10">
+                    <div class="home_sort">
+                        <span>Sắp xếp theo</span>
+                        <button class="btn btn--nomal">Bán chạy</button>
+                        <button class="btn">Mới nhất</button>
+                        <button class="btn btn--nomal">Phổ biến</button>
+                    </div>
                 </div>
-
             </div>
 
         </div>
+
+    </div>
     </div>
 
     <!-- FOOTER -->
