--- a/index.html
+++ b/index.html
@@ -256,16 +256,16 @@
                         </h3>
                         <ul class="category_list">
                             <li class="category_item category_item--active">
-                                <a href="#" class="category_item__link">Trang điểm mặt</a>
+                                <a href="#" class="category_item__link">Điện thoại</a>
                             </li>
                             <li class="category_item">
-                                <a href="#" class="category_item__link">Trang điểm mắt</a>
+                                <a href="#" class="category_item__link">Laptop</a>
                             </li>
                             <li class="category_item">
-                                <a href="#" class="category_item__link">Trang điểm môi</a>
+                                <a href="#" class="category_item__link">Phụ kiện</a>
                             </li>
                             <li class="category_item">
-                                <a href="#" class="category_item__link">Trang điểm môi</a>
+                                <a href="#" class="category_item__link">Sim, thẻ cào</a>
                             </li>
                         </ul>
                     </div>
@@ -309,7 +309,38 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/mypham01.webp);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-12-pro-max-xanh-duong-new-600x600-600x600.jpg);"></div>
+                                        <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập khẩu chính hãng, giá ưu đãi</h4>
+                                        <div class="home_product__item-price">
+                                            <span class="home_product__item-price-old">12.990.000đ</span>
+                                            <span class="home_product__item-price-new">9.990.000đ</span>
+                                        </div>
+                                        <div class="home_product__item-user_action">
+                                            <span class="home_product__item-user_action--like">
+                                                <i class="far fa-heart"></i>
+                                            </span>
+                                            <div class="home_product__item-user_action--liked">
+                                                <i class="fas fa-heart"></i>
+                                            </div>
+                                            <div class="home_product__item-user_action--rating">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </div>
+                                        <div class="home_product__item-origin">
+                                            <span class="home_product__item-origin_branch">Ohui</span>
+                                            <span class="home_product__item-origin_country">Hàn Quốc</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="grid_column_2_sub">
+                                    <div class="home_product__item">
+                                        <div class="home_product__item-img"
+                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-xi-do-600x600.jpg);"></div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -341,7 +372,7 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/mypham01.webp);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/oppo-a74-blue-9-600x600.jpg);"></div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -373,7 +404,7 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/mypham01.webp);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/oppo-reno6-z-5g-black-1-600x600.jpg);"></div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -405,39 +436,7 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/mypham01.webp);"></div>
-                                        <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
-                                            khẩu
-                                            chính
-                                            hãng, giá ưu đãi</h4>
-                                        <div class="home_product__item-price">
-                                            <span class="home_product__item-price-old">12.990.000đ</span>
-                                            <span class="home_product__item-price-new">9.990.000đ</span>
-                                        </div>
-                                        <div class="home_product__item-user_action">
-                                            <span class="home_product__item-user_action--like">
-                                                <i class="far fa-heart"></i>
-                                                <!-- <i class="fas fa-heart"></i> -->
-                                            </span>
-                                            <div class="home_product__item-user_action--rating">
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                            </div>
-                                        </div>
-                                        <div class="home_product__item-origin">
-                                            <span class="home_product__item-origin_branch">Ohui</span>
-                                            <span class="home_product__item-origin_country">Hàn Quốc</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="grid_column_2_sub">
-                                    <div class="home_product__item">
-                                        <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/mypham01.webp);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/realme-c11-2021-blue-1-600x600.jpg);"></div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
