--- a/index.html
+++ b/index.html
@@ -309,26 +309,34 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-12-pro-max-xanh-duong-new-600x600-600x600.jpg);"></div>
-                                        <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập khẩu chính hãng, giá ưu đãi</h4>
+                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-12-pro-max-xanh-duong-new-600x600-600x600.jpg);">
+                                        </div>
+                                        <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
+                                            khẩu chính hãng, giá ưu đãi</h4>
                                         <div class="home_product__item-price">
                                             <span class="home_product__item-price-old">12.990.000đ</span>
                                             <span class="home_product__item-price-new">9.990.000đ</span>
                                         </div>
                                         <div class="home_product__item-user_action">
-                                            <span class="home_product__item-user_action--like">
-                                                <i class="far fa-heart"></i>
+                                            <span
+                                                class="home_product__item-user_action--like home_product__item-user_action--liked">
+                                                <i class="like-nomal far fa-heart"></i>
+                                                <i class="like-fill fa fa-heart"></i>
                                             </span>
-                                            <div class="home_product__item-user_action--liked">
-                                                <i class="fas fa-heart"></i>
-                                            </div>
+
                                             <div class="home_product__item-user_action--rating">
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
-                                                <i class="fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
+
+                                            <div class="home_product__item-user_action--sold">121 đã bán</div>
                                         </div>
                                         <div class="home_product__item-origin">
                                             <span class="home_product__item-origin_branch">Ohui</span>
@@ -340,7 +348,8 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-xi-do-600x600.jpg);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-xi-do-600x600.jpg);">
+                                        </div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -372,7 +381,8 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/phone/smart_phone/oppo-a74-blue-9-600x600.jpg);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/oppo-a74-blue-9-600x600.jpg);">
+                                        </div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -404,7 +414,8 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/phone/smart_phone/oppo-reno6-z-5g-black-1-600x600.jpg);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/oppo-reno6-z-5g-black-1-600x600.jpg);">
+                                        </div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -436,7 +447,8 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
-                                            style="background-image: url(./assets/images/phone/smart_phone/realme-c11-2021-blue-1-600x600.jpg);"></div>
+                                            style="background-image: url(./assets/images/phone/smart_phone/realme-c11-2021-blue-1-600x600.jpg);">
+                                        </div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
                                             khẩu
                                             chính
@@ -822,7 +834,7 @@
                                     </div>
                                 </div>
 
-                                
+
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
@@ -854,7 +866,7 @@
                                     </div>
                                 </div>
 
-                                
+
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
