--- a/index.html
+++ b/index.html
@@ -342,6 +342,14 @@
                                             <span class="home_product__item-origin_branch">Ohui</span>
                                             <span class="home_product__item-origin_country">Hàn Quốc</span>
                                         </div>
+                                        <div class="home_product__item-branch_love">
+                                            <i class="home_product__item-branch_love-icon fas fa-check"></i>
+                                            <span class="home_product__item-branch_love-label">Yêu thích</span>
+                                        </div>
+                                        <div class="home_product__item-sale_off">
+                                            <span class="home_product__item-sale_off-number">10%</span>
+                                            <span class="home_product__item-sale_off-label">GIẢM</span>
+                                        </div>
                                     </div>
                                 </div>
 
