--- a/index.html
+++ b/index.html
@@ -356,6 +356,53 @@
                                 <div class="grid_column_2_sub">
                                     <div class="home_product__item">
                                         <div class="home_product__item-img"
+                                            style="background-image: url(./assets/images/phone/smart_phone/iphone-12-pro-max-xanh-duong-new-600x600-600x600.jpg);">
+                                        </div>
+                                        <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
+                                            khẩu chính hãng, giá ưu đãi</h4>
+                                        <div class="home_product__item-price">
+                                            <span class="home_product__item-price-old">12.990.000đ</span>
+                                            <span class="home_product__item-price-new">9.990.000đ</span>
+                                        </div>
+                                        <div class="home_product__item-user_action">
+                                            <span
+                                                class="home_product__item-user_action--like home_product__item-user_action--liked">
+                                                <i class="like-nomal far fa-heart"></i>
+                                                <i class="like-fill fa fa-heart"></i>
+                                            </span>
+
+                                            <div class="home_product__item-user_action--rating">
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i
+                                                    class="home_product__item-user_action--rating_yellow fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+
+                                            <div class="home_product__item-user_action--sold">121 đã bán</div>
+                                        </div>
+                                        <div class="home_product__item-origin">
+                                            <span class="home_product__item-origin_branch">Ohui</span>
+                                            <span class="home_product__item-origin_country">Hàn Quốc</span>
+                                        </div>
+                                        <div class="home_product__item-branch_love">
+                                            <i class="home_product__item-branch_love-icon fas fa-check"></i>
+                                            <span class="home_product__item-branch_love-label">Yêu thích</span>
+                                        </div>
+                                        <div class="home_product__item-sale_off">
+                                            <span class="home_product__item-sale_off-number">10%</span>
+                                            <span class="home_product__item-sale_off-label">GIẢM</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="grid_column_2_sub">
+                                    <div class="home_product__item">
+                                        <div class="home_product__item-img"
                                             style="background-image: url(./assets/images/phone/smart_phone/iphone-xi-do-600x600.jpg);">
                                         </div>
                                         <h4 class="home_product__item-name">Mỹ phẩm trắng da, ngừa mụn hàn quốc nhập
