--- a/index.html
+++ b/index.html
@@ -1354,24 +1354,26 @@
             </div>
         </div>
         <div class="footer__rule">
-            <ul class="footer_2">
-                <li class="footer_2-item">
-                    <a href="" class="footer_2-item-link">Chính sách bảo</a>
-                </li>
-                <li class="footer_2-item">
-                    <a href="" class="footer_2-item-link">Quy chế hoạt động</a>
-                </li>
-                <li class="footer_2-item">
-                    <a href="" class="footer_2-item-link">Chính sách vận chuyển</a>
-                </li>
-                <li class="footer_2-item">
-                    <a href="" class="footer_2-item-link">Chính sách trả hàng và hoàn tiền</a>
-                </li>
-            </ul>
-            <div class="footer_2_registed">
-                <img src="./assets/images/dadangky.png" alt="">
-                <span>Công ty điện thoại Chung Tuyết</span>
-                <span>© 2015 - Bản quyền thuộc về Công ty TNHH điện thoại Chung Tuyết</span>
+            <div class="grid">
+                <ul class="footer_2">
+                    <li class="footer_2-item">
+                        <a href="" class="footer_2-item-link">Chính sách bảo hành</a>
+                    </li>
+                    <li class="footer_2-item">
+                        <a href="" class="footer_2-item-link">Quy chế hoạt động</a>
+                    </li>
+                    <li class="footer_2-item">
+                        <a href="" class="footer_2-item-link">Chính sách vận chuyển</a>
+                    </li>
+                    <li class="footer_2-item">
+                        <a href="" class="footer_2-item-link">Chính sách trả hàng và hoàn tiền</a>
+                    </li>
+                </ul>
+                <div class="footer_2_registed">
+                    <img src="./assets/images/dadangky.png" alt="">
+                    <span>Công ty điện thoại Chung Tuyết</span>
+                    <span>© 2015 - Bản quyền thuộc về Công ty TNHH điện thoại Chung Tuyết</span>
+                </div>
             </div>
         </div>
     </footer>
